web/wp-content/themes/lfevents/src/assets/scss/modules/_button-with-expiry.scss
.wp-block-lf-buttons-with-expiry {
  display: flex;
  flex-wrap: wrap;

  &.aligncenter {
    justify-content: center;
  }

  .wp-block-lf-button-with-expiry {
    margin-right: 2rem;
  }
}

.wp-block-lf-button-with-expiry {
  position: relative;

  &:before {
    content: '';
    width: 100%;
    height: 100%;
    position: absolute;
    left: 0;
    top: 0;
    background: #000;
    border-radius: 4px;
  }

  a {
    border-radius: 4px;
    padding-bottom: .375em;
    padding-left: 1.25em;
    padding-right: 1.25em;
    padding-top: .375em;
    box-shadow: 3px 3px 10px -3px #000;

    &.disabled {
      cursor: default;
      pointer-events: none;
      background-color: #cccccc;
      color: #888888;
    }

    &:hover {
      opacity: .5;
    }
  }

  @media(max-width: 767px) {
    margin: auto auto 15px!important;
  }
}

